# FERMO

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
compose/fermo_gui/: Dockerfile
compose/local/flask/: Dockerfile  entrypoint  start
compose/local/flask/celery/beat/: start
compose/local/flask/celery/flower/: start
compose/local/flask/celery/worker/: start
compose/nginx/: Dockerfile  nginx.conf
fermo_gui/: cleanup_jobs.py  entrypoint_docker.sh  make_celery.py  pyproject.toml
fermo_gui/fermo_gui/: __init__.py  job_counter.txt
fermo_gui/fermo_gui/analysis/: dashboard_manager.py  general_manager.py
fermo_gui/fermo_gui/config/: extensions.py
fermo_gui/fermo_gui/forms/: session_load_forms.py
fermo_gui/fermo_gui/processing/: input_parser.py
fermo_gui/fermo_gui/routes/: __init__.py  routes_general.py  routes_results.py  routes_start_analysis.py  routes_submission.py
fermo_gui/fermo_gui/static/css/: style.css
fermo_gui/fermo_gui/static/js/: copy_clipboard.js  dispatch_forms.js  dragdrop.js  dynamic_tables.js
fermo_gui/fermo_gui/static/params/: default_params.json
fermo_gui/fermo_gui/templates/: _formhelpers.html  about.html  base.html  dashboard.html  email_failure.html  email_success.html  forms.html  index.html  job_download.html  job_failed.html  job_not_found.html  job_running.html  job_submitted.html
fermo_gui/fermo_gui/upload/example3/results/: out.fermo.abbrev.csv  out.fermo.full.csv  out.fermo.session.json  out.fermo.summary.txt
