[project]
name = "fermo_gui"
version = "1.1.3"
description = "Visalization part of program FERMO"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" },
    { name = "Hannah E. Augustijn" }
]
keywords = [
    "cheminformatics",
    "metabolomics",
    "genomics"
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
    "celery[redis]==5.2.7",
    "coloredlogs==15.0.1",
    "fermo_core==0.6.4",
    "Flask==3.0.1",
    "Flask-WTF==1.2.1",
    "Flask-Mail==0.9.1",
    "gevent==24.2.1",
    "gunicorn~=23.0",
    "jsonschema==4.19.0",
    "pandas==2.0.3",
    "pre-commit~=3.4.0",
    "pydantic==2.5.2",
    "requests==2.32.3"
]

[project.urls]
"Website" = "https://fermo.bioinformatics.nl/"
"Repository" = "https://github.com/fermo-metabolomics/fermo"
"Documentation" = "https://fermo-metabolomics.github.io/fermo_docs/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-eradicate/eradicate
    "ERA",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pygrep
    "PGH",
    # ruff checks
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
    # flake8-bandit
    "S"
]
ignore = [
    # if-expr-with-true-false
    "SIM210",
    # non-pep604-annotation
    "UP007",
    # commented-out code
    "ERA001",
    # set-attr-with-constant
    "B010",
    # possible-hardcoded-key
    "S105"
]